Binaural synthesis (confbridge): Adds libfftw3 as dependency.
Adds libfftw3 to the build chain that is is going to be used for binaural
synthesis by bridge_softmix.

ASTERISK-26292

Change-Id: Iedc2f174e4ccb39ae5d9e698e339c6a17155867b

--- a/include/asterisk/autoconfig.h.in
+++ b/include/asterisk/autoconfig.h.in
@@ -236,6 +236,12 @@
 /* Define to 1 if you have the `ffsll' function. */
 #undef HAVE_FFSLL
 
+/* Define 1 if your system has fftw. */
+#undef HAVE_FFTW
+
+/* Define to 1 if you have the LIBFFTW3 library. */
+#undef HAVE_FFTW3
+
 /* Define to 1 if you have the `floor' function. */
 #undef HAVE_FLOOR
 
